Beta Fix - issue with sidebar flyout color picker getting cut off

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -7094,7 +7094,8 @@ button span.onedrive-btn-status{
 }
 
 .sidebar-panel-body .sp-container,
-.sidebar-panel-footer .sp-container {
+.sidebar-panel-footer .sp-container,
+.sidebar-flyout .sp-container {
     position: fixed !important;
 }
 .sp-palette-container {
